                     CHANGES version 5.27.0

           This file summarizes changes made since 5.0

Version 5.27.0

Fixed: Issue #872: Procmatch PID column show five digits only


Version 5.26.0

New: Allow any characters including space in a service name if the name is
     enclosed in quotes. Example:
     check process "apache 😍" with pidfile /var/run/httpd.pid

New: The load average test now allows to set the per-CPU-core limit, so it 
     allows for generic load average limit policy regardless of CPU count. Example:
        if loadavg(1m) per core > 2 then alert

New: Added the MQTT protocol test.
     Syntax:
         IF FAILED PORT <number> PROTOCOL MQTT [USERNAME <string> PASSWORD <string>] THEN ALERT
     Example:
         check process mosquitto with pidfile /var/run/mosquitto.pid
           start program = "/sbin/start mosquitto"
           stop program = "/sbin/stop mosquitto"
           if failed port 1883 protocol mqtt then alert

Fixed: Filesystem with missing free inodes statistics (such as CEPH) shown wrong free value (-1).

Fixed: Issue #829: The start delay is now in effect just on first monit start after machine reboot.

Fixed: TLSv1.3 support detection during compile time


Version 5.25.3

Fixed: Issue #619: The HTTP protocol test may log SSL read errors and the content/checksum test may
fail when the server sends chunked encoded response. 

Fixed: Issue #749: $HOST doesn't work in the "name" part of the "from:" in mail-format message

Fixed: Issue #759: The "stop" action for "check program" has no effect if the "every" statement
is used to skip monitoring in some cycles.

Fixed: Issue #763: if the ping test target is a hostname which resolved to multiple IPs, Monit
didn't try the next IP if the first one failed and returned error.

Fixed: Issue #764: Monit may crash if "unmonitor" or "stop" action was triggered by some test

Fixed: Issue #769: Monit CLI status command doesn't work if only read-only credentials is present